[package]
name = "Chimerra-PasswordStore"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
panic = "abort"
lto = true          
codegen-units = 1 
opt-level = "z"
debug = false

[dependencies]
libc = "0.2"
secrecy = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
binrw = "0.13"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.2"
sequoia-openpgp = { version = "1.22", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
git2 = "0.18"
bip39 = "2.1"
unicode-width = "0.1"
hex = "0.4"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_System_Diagnostics_Debug"] }
